--- a/client/app/fieldElement/fieldElement.html
+++ b/client/app/fieldElement/fieldElement.html
@@ -53,7 +53,15 @@
             <span ng-if="field.choices.length > 1">
             <a href="" class="js_delete_element btn btn-xs btn-danger" href='' tooltip="Remove this option" tabindex='-1' ng-click="removeChoice(field, field.choices.indexOf(choice))"> <em class="icon icon-remove muted"></em> </a>
             </span>
+            <span ng-if='choice.is_na'>
+              <strong for="" class="badge badge-info"> NA </strong>
+            </span>
           </div>
+        </div>
+        <div class="multipleOptions">
+          <input type="checkbox" class="checkbox-small" name="hasNA" type="checkbox" id="addClarification" ng-model="field.has_na" ng-change="addNAChoice(field)">
+          &nbsp;
+          <label for="addClarification" class="smallText">Add NA choice</label>
         </div>
         <condition-settings></condition-settings>
       </div>
