--- a/client/index.html
+++ b/client/index.html
@@ -88,6 +88,7 @@
           <script src="app/forms/forms.js"></script>
           <script src="app/formshow/formshow.js"></script>
           <script src="app/main/main.js"></script>
+          <script src="app/na/na.js"></script>
           <script src="app/options/options.js"></script>
           <script src="app/prevElement/prevElement.js"></script>
           <script src="app/sectionData/sectionData.js"></script>
