--- a/client/app/forms/forms.html
+++ b/client/app/forms/forms.html
@@ -46,7 +46,7 @@
       <tbody>
         <tr ng-repeat="form in forms">
           <td> {{$index + 1}}</td>
-          <td> <a ng-href="{{isAdmin() ? '/forms/edit/' : 'forms/'}}{{form._id}}">{{form.name}}</a></td>
+          <td> <a ng-href="{{getFormLink(form)}}">{{form.name}}</a></td>
           <td> {{form.status}}</td>
           <td> {{form.author.name}}</td>
           <td> {{getFormatedDate(form.created)}}</td>
