--- a/client/index.html
+++ b/client/index.html
@@ -91,6 +91,7 @@
           <script src="app/na/na.js"></script>
           <script src="app/options/options.js"></script>
           <script src="app/prevElement/prevElement.js"></script>
+          <script src="app/results/results.js"></script>
           <script src="app/sectionData/sectionData.js"></script>
           <script src="app/typeBadge/typeBadge.js"></script>
           <script src="components/auth/auth.js"></script>
