--- a/client/app/create/create.html
+++ b/client/app/create/create.html
@@ -65,7 +65,8 @@
                 <h3 class="panel-title">Certification logic</h3>
               </div>
               <div class="panel-body">
-                <h6 class="text-muted"> Coming soon!</h6>
+                <button class="btn btn-info"> + Add certificate</button>
+
               </div>
             </div>
 
