--- a/client/index.html
+++ b/client/index.html
@@ -66,6 +66,7 @@
       <script src="bower_components/angular-ladda/dist/angular-ladda.min.js"></script>
       <script src="bower_components/sweetalert/lib/sweet-alert.js"></script>
       <script src="bower_components/angular-sweetalert/SweetAlert.js"></script>
+      <script src="bower_components/angular-xeditable/dist/js/xeditable.js"></script>
       <!-- endbower -->
       <script src="socket.io-client/socket.io.js"></script>
     <!-- endbuild -->
@@ -80,8 +81,13 @@
           <script src="app/account/settings/settings.js"></script>
           <script src="app/account/signup/signup.js"></script>
           <script src="app/admin/admin.js"></script>
+          <script src="app/certificate/cerate.js"></script>
+          <script src="app/certificate/certificate.js"></script>
+          <script src="app/certificateData/certificateData.js"></script>
           <script src="app/conditionSettings/conditionSettings.js"></script>
           <script src="app/create/create.js"></script>
+          <script src="app/createCertificate/createCertificate.js"></script>
+          <script src="app/createCertificateCtrl/createCertificateCtrl.js"></script>
           <script src="app/fieldElement/fieldElement.js"></script>
           <script src="app/fields/fields.js"></script>
           <script src="app/formData/formData.js"></script>
