--- a/client/index.html
+++ b/client/index.html
@@ -61,7 +61,7 @@
       <script src="bower_components/jquery-ui/jquery-ui.js"></script>
       <script src="bower_components/angular-ui-sortable/sortable.js"></script>
       <script src="bower_components/angular-animate/angular-animate.js"></script>
-      <script src="bower_components/spinjs/spin.js"></script>
+      <script src="bower_components/spin.js/spin.js"></script>
       <script src="bower_components/ladda/dist/ladda.min.js"></script>
       <script src="bower_components/angular-ladda/dist/angular-ladda.min.js"></script>
       <script src="bower_components/sweetalert/lib/sweet-alert.js"></script>
@@ -81,13 +81,11 @@
           <script src="app/account/settings/settings.js"></script>
           <script src="app/account/signup/signup.js"></script>
           <script src="app/admin/admin.js"></script>
-          <script src="app/certificate/cerate.js"></script>
           <script src="app/certificate/certificate.js"></script>
           <script src="app/certificateData/certificateData.js"></script>
           <script src="app/conditionSettings/conditionSettings.js"></script>
           <script src="app/create/create.js"></script>
           <script src="app/createCertificate/createCertificate.js"></script>
-          <script src="app/createCertificateCtrl/createCertificateCtrl.js"></script>
           <script src="app/fieldElement/fieldElement.js"></script>
           <script src="app/fields/fields.js"></script>
           <script src="app/formData/formData.js"></script>
