--- a/client/app/certificate/attach.certificate.html
+++ b/client/app/certificate/attach.certificate.html
@@ -5,23 +5,23 @@
   <table class="table table-striped table-hover">
     <thead>
       <tr>
+        <th></th>
         <th>Name</th>
         <th>Min</th>
         <th>Max</th>
-        <th></th>
       </tr>
     </thead>
     <tbody>
       <tr ng-repeat="certificate in certificates">
+        <td> <input type="checkbox" ng-model="certificate.selected" /> </td>
         <td>{{certificate.name}}</td>
         <td>{{certificate.min}}</td>
         <td>{{certificate.max}}</td>
-        <td> <input type="checkbox" ng-model="certificate.selected" /> </td>
       </tr>
     </tbody>
   </table>
 </div>
 <div class="modal-footer">
   <a class="btn btn-link" ng-click="cancel()">Cancel</a>
-  <button class="btn btn-primary">Add</button>
+  <button class="btn btn-primary" ng-click="ok()">Add</button>
 </div>
