--- a/client/app/create/create.html
+++ b/client/app/create/create.html
@@ -61,6 +61,23 @@
                 <h3 class="panel-title">Certification logic</h3>
               </div>
               <div class="panel-body">
+          <table class="table table-striped table-hover">
+            <thead>
+              <tr>
+                <th>Name</th>
+                <th>Min</th>
+                <th>Max</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr ng-repeat="certificate in form.certificates">
+                <td>{{certificate.name}}</td>
+                <td>{{certificate.min}}</td>
+                <td>{{certificate.max}}</td>
+              </tr>
+            </tbody>
+          </table>
+
                 <button class="btn btn-info" ng-click="attachCertificate()"> + Add certificate</button>
               </div>
             </div>
