--- a/client/app/create/create.html
+++ b/client/app/create/create.html
@@ -48,7 +48,11 @@
           <div class="from-settings">
             <div class="form-group">
               <label for="formDescription">Describe this form</label>
-              <textarea name="formDescription" id="formDescription" cols="30" rows="3" class="form-control"></textarea>
+              <textarea name="formDescription" id="formDescription" cols="30" rows="3" class="form-control" ng-model="form.description"></textarea>
+            </div>
+            <div class="form-group">
+              <label for="">Form logo</label>
+              <input class="form-control" ng-model="form.logo"></label>
             </div>
             <div class="pull-right">
               <button class="btn btn-info" ng-click="submitForm(form)" ladda="formSaving" data-style="expand-left" tooltip="Save this form!" tooltip-append-to-body="true">Save</button>
