--- a/client/app/forms/forms.html
+++ b/client/app/forms/forms.html
@@ -1,6 +1,5 @@
-<div ng-include="'components/navbar/navbar.html'"></div>
+<div ng-include="'components/navbar/navbar.html'" ng-if="!isAdmin()"></div>
 
 <div ng-include="'app/forms/form-normal.html'" ng-if="!isAdmin()"></div>
 <div ng-include="'app/forms/form-admin.html'" ng-if="isAdmin()"></div>
 
-<div ng-include="'components/footer/footer.html'"></div>
