--- a/client/index.html
+++ b/client/index.html
@@ -22,7 +22,7 @@
       <!-- injector:css -->
       <!-- endinjector -->
     <!-- endbuild -->
-    <link href='//fonts.googleapis.com/css?family=Open+Sans:400italic,400,300,600' rel='stylesheet' type='text/css'>
+    <link href='//fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,400italic' rel='stylesheet' type='text/css'>
   </head>
   <body ng-app="greenApp">
     <!--[if lt IE 7]>
