--- a/client/app/create/create.html
+++ b/client/app/create/create.html
@@ -35,7 +35,7 @@
           <div class="input-group">
             <input type="text" required class="form-control" ng-model="newSection" placeholder='+ Add new section' />
             <span class="input-group-btn">
-            <button class="btn btn-info" type="button">Add</button>
+            <button class="btn btn-info" type="submit">Add</button>
             </span>
           </div>
         </form>
