--- a/client/app/formshow/formshow.html
+++ b/client/app/formshow/formshow.html
@@ -53,7 +53,7 @@
         &nbsp;&nbsp;&nbsp;&nbsp;
         <button class="btn btn-success" type="submit" ladda="formSaving" data-style="expand-left" tooltip="Save this form!" tooltip-append-to-body="true" ng-if="$index != form.sections.length - 1">Save</button>
 
-        <button class="btn btn-success btn-lg" type="submit" ladda="formSaving" data-style="expand-left" tooltip="Submit this form!" tooltip-append-to-body="true" ng-if="$index == form.sections.length - 1">Submit</button>
+        <button class="btn btn-success btn-lg" type="submit" ladda="formSaving" data-style="expand-left" tooltip="Submit this form!" tooltip-append-to-body="true" ng-if="$index == form.sections.length - 1" ng-click="form.submitted = true">Submit</button>
         &nbsp;&nbsp;&nbsp;
         <button class="btn btn-primary" ng-click="moveToNextStep($index, section)" ng-if="$index != form.sections.length - 1"> Next step &rarr; </button>
       </div>
