--- a/client/app/create/create.html
+++ b/client/app/create/create.html
@@ -1,6 +1,13 @@
-<div ng-include="'components/navbar/navbar.html'"></div>
-<div class="container page-container">
-  <div class="row">
+<div class="row-fluid">
+<div ng-include="'components/sidebar/sidebar.html'"></div>
+<style>
+  .main-content-wrap {
+    background: #fff;
+  }
+</style>
+
+<div class="col-lg-10 col-sm-10 main-content-wrap">
+  <div class="row-fluid">
     <div class="form-header-meta">
       <div class="col-lg-8 col-sm-8">
         <div class="form-title">
@@ -18,7 +25,7 @@
       </div>
     </div>
   </div>
-  <div class="row">
+  <div class="row-fluid">
     <div class="col-lg-3 col-sm-3 g-c-sidebar">
       <ul class="g-c-section-list">
         <li ng-class="{active: formSettings.active}" ng-click="loadFormSettings()">
@@ -41,7 +48,7 @@
         </form>
       </div>
     </div>
-    <div class="col-lg-9 col-sm-9 g-c-content">
+    <div class="col-lg-8 col-sm-8 g-c-content">
       <div ng-if="formSettings.active" class="row g-c-section-content">
         <div class="col-lg-12 col-sm-12">
           <h4 class="g-c-section-heading">Form settings / Publishing</h4>
@@ -256,6 +263,7 @@
 </tab>
 </tabset>
   </div>
+</div>
 </div>
 </div>
 <div ng-include="'components/footer/footer.html'"></div>
