--- a/client/app/forms/form-admin.html
+++ b/client/app/forms/form-admin.html
@@ -1,5 +1,55 @@
 <div class="row-fluid">
-  <div ng-include="'components/sidebar/sidebar.html'"></div>
-  <div ng-include="'app/forms/forms-admin-content.html'"></div>
-  <!-- <div ng-include="'components/footer/footer.html'"></div> -->
+  <div ng-include="'components/sidebar/sidebar.html'" ng-if="isAdmin()"></div>
+  <div class="col-lg-6 col-sm-6 main-content-wrap">
+    <div class="main-content">
+      <br>
+      <div class="row-fluid oh">
+        <div class="col-lg-7">
+          <div class="iconed-input">
+            <input type="text" class="form-control" placeholder="Search for forms">
+            <em class="icon icon-search"></em>
+          </div>
+        </div>
+        <div class="col-lg-2">
+        </div>
+        <div class="col-lg-3">
+          <form class="form" ng-if="isAdmin()" >
+            <button type="submit" class="btn btn-primary btn-sm" ng-click="addform()"> <em class="icon icon-plus"></em> &nbsp;&nbsp; Add new form</button>
+          </form>
+        </div>
+      </div>
+      <div class="clearfix"></div>
+      <div class="froms-list">
+        <div ng-if="forms.length > 0">
+
+          <div class="row-fluid tabled-row-heading">
+            <div class="col-lg-6 col-sm-6"><strong>Certification Name</strong></div>
+            <div class="col-lg-3 col-sm-3"><strong>Status</strong></div>
+            <div class="col-lg-3 col-sm-3"><strong>Created by</strong></div>
+          </div>
+          <div class="clearfix"></div>
+          <div class="row-fluid tabled-row" ng-repeat="form in forms" ng-click="slideInFormDetails(form)">
+            <div class="col-lg-6 col-sm-6">
+              <a ng-href="{{getFormLink(form)}}">{{form.name}}</a>
+                <span class="text-info" ng-if="form.status == 'Unpublished'">
+                <em class="icon icon-pencil2"></em>
+            </span>
+          </div>
+          <div class="col-lg-3 col-sm-3">                  {{form.status}}
+            &nbsp;
+            <span class="text-success" ng-if="form.status == 'Published'" tooltip="Form published on {{getFormatedDate(form.updated)}}">
+            <em class="icon icon-check-alt"></em>
+          </span></div>
+          <div class="col-lg-3 col-sm-3">{{form.author.name}}</div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+<div class="col-lg-4 col-sm-4 p0">
+  <div class="main-content-slider">
+    <h2 class="slider-title">{{currentForm.name}}</h2>
+    <br>
+  </div>
+</div>
 </div>
