--- a/client/app/forms/forms-admin-content.html
+++ b/client/app/forms/forms-admin-content.html
@@ -1,41 +1,25 @@
-<style>
-  .main-content-wrap {
-    padding: 0;
-  }
 
-  .main-content {
-    min-height: 900px;
-    background: #fff;
-    padding: 30px 20px;
-  }
-</style>
-
-<div class="col-lg-7 col-sm-7 main-content-wrap">
+<div class="col-lg-6 col-sm-6 main-content-wrap">
   <div class="main-content">
 
     <form class="form" ng-if="isAdmin()" >
       <button type="submit" class="btn btn-primary" ng-click="addform()"> <em class="icon icon-plus"></em>  Add new form</button>
     </form>
 
-    <br><br>
-
+    <hr>
       <div ng-if="forms.length > 0">
-        <table class="table table-striped">
+        <table class="table table-hover table-click">
           <thead>
             <tr>
-              <th>
-                #
-              </th>
               <th> Certification Name </th>
               <th> Status </th>
               <th> Created by </th>
               <th> Created on </th>
-              <th ng-if="isAdmin()"> Actions </th>
+              <!-- <th ng-if="isAdmin()"> Actions </th> -->
             </tr>
           </thead>
           <tbody>
-            <tr ng-repeat="form in forms">
-              <td> {{$index + 1}}</td>
+            <tr ng-repeat="form in forms" ng-click="slideInFormDetails(form)">
               <td>
                 <a ng-href="{{getFormLink(form)}}">{{form.name}}</a>
                 <span class="text-info" ng-if="form.status == 'Unpublished'">
@@ -51,17 +35,25 @@
               </td>
               <td> {{form.author.name}}</td>
               <td> {{getFormatedDate(form.created)}}</td>
-              <td ng-if="isAdmin()" >
+<!--               <td ng-if="isAdmin()" >
                 <a href="forms/{{form._id}}" class="btn btn-info btn-xs" ng-click="previewForm(form)
                 " tooltip="Preview this form" tooltip-append-to-body="true"><em class="icon icon-eye"></em></a>
                 &nbsp;&nbsp;&nbsp;
                 <a href="" class="btn btn-danger btn-xs" ng-click="removeForm(form)" tooltip="Remove this form! (think twice)" tooltip-append-to-body="true">
                   <em class="icon icon-remove"></em>
                 </a>
-              </td>
+              </td> -->
             </tr>
           </tbody>
         </table>
       </div>
+  </div>
+</div>
+
+<div class="col-lg-4 col-sm-4 p0">
+  <div class="main-content-slider">
+    <h2 class="slider-title">{{currentForm.name}}</h2>
+    <br>
+
   </div>
 </div>
