Adding sidebar and the sidebar

--- a/client/app/forms/form-admin.html
+++ b/client/app/forms/form-admin.html
@@ -48,8 +48,20 @@
 </div>
 <div class="col-lg-4 col-sm-4 p0">
   <div class="main-content-slider">
+    <div ng-if="currentForm">
     <h2 class="slider-title">{{currentForm.name}}</h2>
-    <br>
+    <p class="text-muted">
+      {{currentForm.description}}
+    </p>
+    <div class="row-fluid">
+      <div class="col-lg-6 col-sm-6">
+        <a href="" class="btn btn-sm btn-primary">Edit form</a>
+      </div>
+      <div class="col-lg-6 col-sm-6">
+        <a href="" class="btn btn-sm btn-primary">View Responses</a>
+      </div>
+    </div>
+  </div>
   </div>
 </div>
 </div>
