--- a/client/app/forms/form-admin.html
+++ b/client/app/forms/form-admin.html
@@ -53,14 +53,24 @@
     <p class="text-muted">
       {{currentForm.description}}
     </p>
+    <div>
+      <span class="text-muted">Last Updated: </span> <span> {{getFormatedDate(currentForm.created)}}</span>
+      <br>
+      <br>
+    </div>
+
     <div class="row-fluid">
       <div class="col-lg-6 col-sm-6">
-        <a href="" class="btn btn-sm btn-primary">Edit form</a>
+        <a href="" class="btn btn-xs btn-info">Edit form</a>
       </div>
       <div class="col-lg-6 col-sm-6">
-        <a href="" class="btn btn-sm btn-primary">View Responses</a>
+        <a href="" class="btn btn-xs btn-warning">View Responses</a>
       </div>
     </div>
+    <div>
+      <img src="assets/images/empty_chart.png" alt="" class="img-responsive">
+    </div>
+
   </div>
   </div>
 </div>
