--- a/client/app/forms/form-admin.html
+++ b/client/app/forms/form-admin.html
@@ -22,6 +22,12 @@
       <div class="froms-list">
         <div ng-if="forms.length > 0">
 
+          <div class="tabled-row-filter">
+            <span class="label label-info selected">All</span>
+            <span class="label label-info">Published</span>
+            <span class="label label-info">UnPublished</span>
+          </div>
+
           <div class="row-fluid tabled-row-heading">
             <div class="col-lg-6 col-sm-6"><strong>Certification Name</strong></div>
             <div class="col-lg-3 col-sm-3"><strong>Status</strong></div>
@@ -60,11 +66,12 @@
     </div>
 
     <div class="row-fluid">
-      <div class="col-lg-6 col-sm-6">
-        <a href="" class="btn btn-xs btn-info">Edit form</a>
-      </div>
-      <div class="col-lg-6 col-sm-6">
-        <a href="" class="btn btn-xs btn-warning">View Responses</a>
+      <div class="col-lg-12 col-sm-12">
+        <div class="pull-right">
+          <a href="" class="btn btn-sm btn-info"><em class="icon icon-pencil2"></em>&nbsp; Edit form</a>
+          &nbsp;&nbsp;&nbsp;
+          <a href="" class="btn btn-sm btn-warning"><em class="icon icon-eye"></em>&nbsp;  View Responses</a>
+        </div>
       </div>
     </div>
     <div>
