Fixing the create form UI

--- a/client/app/forms/form-admin.html
+++ b/client/app/forms/form-admin.html
@@ -4,7 +4,7 @@
     <div class="main-content">
       <br>
       <div class="row-fluid oh">
-        <div class="col-lg-7">
+        <div class="col-lg-7 col-sm-7">
           <div class="iconed-input">
             <input type="text" class="form-control" placeholder="Search for forms">
             <em class="icon icon-search"></em>
