--- a/client/app/certificate/certificate.html
+++ b/client/app/certificate/certificate.html
@@ -1,63 +1,66 @@
-<div ng-include="'components/navbar/navbar.html'"></div>
-<div class="container page-container">
-  <div class="row">
-    <div class="col-lg-12">
-      <h1 class="page-title">Certificates</h1>
-    </div>
-  </div>
-  <div class="row">
-    <div class="col-lg-12 oh">
-      <form class="form" ng-if="isAdmin()" >
-        <!--       <input type="text" class="form-control" placeholder="Add a new thing here." ng-model="newform"> -->
-        <button type="submit" class="btn btn-primary" ng-click="openNewCertificate()"> <em class="icon icon-plus"></em>  Add new certificate</button>
-      </form>
-      <div class="clearfix"></div>
-      <br>
-      <div ng-if="certificates.length == 0">
-        <div class="empty certificates-empty">
-          <img src="assets/images/empty/no_certificates_text.svg" alt="" class="empty-hint">
-          <div class="empty-image">
-            <img src="assets/images/empty/no_certificates.svg" alt="" class="empty">
-            <div class="empty-text">
-              Your don't have any certificates right now!
-            </div>
-          </div>
+<div class="row-fluid">
+  <div ng-include="'components/sidebar/sidebar.html'"></div>
+  <div class="col-lg-10 col-sm-10 main-content-wrap">
+    <div class="main-content">
+      <div class="row">
+        <div class="col-lg-12 col-sm-12">
+          <h1 class="page-title">Certificates</h1>
         </div>
       </div>
-      <!-- <div ng-if="certificates.length > 0"> -->
-      <div>
-        <table class="table table-striped table-hover">
-          <thead>
-            <tr>
-              <th>
-                #
-              </th>
-              <th> Certification Name </th>
-              <th> Status </th>
-              <th>Min</th>
-              <th>Max</th>
-              <th> Created on </th>
-              <th ng-if="isAdmin()"> Actions </th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr ng-repeat="certificate in certificates">
-              <td> {{$index + 1}}</td>
-              <td>{{certificate.name}}</td>
-              <td>{{ certificate.status }}</td>
-              <td>{{ certificate.min || 0 }}</td>
-              <td>{{ certificate.max || 0 }}</td>
-              <td> {{getFormatedDate(certificate.updated)}}</td>
-              <td>
-                <button class="btn btn-info btn-xs" ng-click="editCertificate(certificate)"><em class="icon icon-pencil"></em></button>
-                &nbsp;&nbsp;&nbsp;
-                <button class="btn btn-danger btn-xs" ng-click="removeCertificate(certificate)"><em class="icon icon-remove"></em></button>
-              </td>
-            </tr>
-          </tbody>
-        </table>
+      <div class="row">
+        <div class="col-lg-12 oh">
+          <form class="form" ng-if="isAdmin()" >
+            <!--       <input type="text" class="form-control" placeholder="Add a new thing here." ng-model="newform"> -->
+            <button type="submit" class="btn btn-primary" ng-click="openNewCertificate()"> <em class="icon icon-plus"></em>  Add new certificate</button>
+          </form>
+          <div class="clearfix"></div>
+          <br>
+          <div ng-if="certificates.length == 0">
+            <div class="empty certificates-empty">
+              <img src="assets/images/empty/no_certificates_text.svg" alt="" class="empty-hint">
+              <div class="empty-image">
+                <img src="assets/images/empty/no_certificates.svg" alt="" class="empty">
+                <div class="empty-text">
+                  Your don't have any certificates right now!
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- <div ng-if="certificates.length > 0"> -->
+          <div>
+            <table class="table table-striped table-hover">
+              <thead>
+                <tr>
+                  <th>
+                    #
+                  </th>
+                  <th> Certification Name </th>
+                  <th> Status </th>
+                  <th>Min</th>
+                  <th>Max</th>
+                  <th> Created on </th>
+                  <th ng-if="isAdmin()"> Actions </th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr ng-repeat="certificate in certificates">
+                  <td> {{$index + 1}}</td>
+                  <td>{{certificate.name}}</td>
+                  <td>{{ certificate.status }}</td>
+                  <td>{{ certificate.min || 0 }}</td>
+                  <td>{{ certificate.max || 0 }}</td>
+                  <td> {{getFormatedDate(certificate.updated)}}</td>
+                  <td>
+                    <button class="btn btn-info btn-xs" ng-click="editCertificate(certificate)"><em class="icon icon-pencil"></em></button>
+                    &nbsp;&nbsp;&nbsp;
+                    <button class="btn btn-danger btn-xs" ng-click="removeCertificate(certificate)"><em class="icon icon-remove"></em></button>
+                  </td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+        </div>
       </div>
     </div>
   </div>
 </div>
-<div ng-include="'components/footer/footer.html'"></div>
