--- a/client/app/forms/form-admin.html
+++ b/client/app/forms/form-admin.html
@@ -6,7 +6,7 @@
       <div class="row-fluid oh">
         <div class="col-lg-7 col-sm-7">
           <div class="iconed-input">
-            <input type="text" class="form-control" placeholder="Search for forms">
+            <input type="text" class="form-control" ng-model="query.name" placeholder="Search for forms">
             <em class="icon icon-search"></em>
           </div>
         </div>
@@ -22,9 +22,9 @@
       <div class="froms-list">
         <div ng-if="forms.length > 0">
           <div class="tabled-row-filter">
-            <span class="label label-info selected">All</span>
-            <span class="label label-info">Published</span>
-            <span class="label label-info">UnPublished</span>
+            <span class="label label-info" ng-class="{selected: !querys.status}" ng-click="querys.status = undefined">All</span>
+            <span class="label label-info" ng-class="{selected: querys.status == 'Published'}" ng-click="querys.status = 'Published'">Published</span>
+            <span class="label label-info" ng-class="{selected: querys.status == 'Unpublished'}" ng-click="querys.status = 'Unpublished'">UnPublished</span>
           </div>
           <div class="row-fluid tabled-row-heading">
             <div class="col-lg-6 col-sm-6"><strong>Certification Name</strong></div>
@@ -32,7 +32,7 @@
             <div class="col-lg-3 col-sm-3"><strong>Created by</strong></div>
           </div>
           <div class="clearfix"></div>
-          <div class="row-fluid tabled-row" ng-repeat="form in forms" ng-click="slideInFormDetails(form)">
+          <div class="row-fluid tabled-row" ng-repeat="form in forms | filter: query| filter:querys.status:true" ng-click="slideInFormDetails(form)">
             <div class="col-lg-6 col-sm-6">
               <a ng-href="{{getFormLink(form)}}">{{form.name}}</a>
               <span class="text-info" ng-if="form.status == 'Unpublished'">
